# nla-ai-videocreator-rust

./: .gitignore  AGENTS.md  Cargo.toml  Dioxus.toml  LICENSE  PROJECT.md  README.md  split_preview.py
docs/: AUDIO_TIMELINE_PLAN.md  CONTENT_ARCHITECTURE.md  DECODE-STRATEGIES.md  PREVIEW_STATS.md  PROJECT.md  PROVIDER_BUILDER_SPEC.md  PROVIDER_MANIFEST_SCHEMA.md  PROVIDER_SETUP_GUIDE.md  PROVIDER_UI_V2.md  REFACTOR.MD  TESTING_PROVIDER_V2.md  V2_STATUS.md
projects/My Project/: project.json
projects/My Projecttt/: project.json
src/: app.rs  constants.rs  main.rs  timeline.rs  utils.rs
src/components/: generation_queue_panel.rs  mod.rs  new_project_modal.rs  preview_panel.rs  provider_builder_modal.rs  provider_builder_modal_v2.rs  provider_json_editor_modal.rs  providers_modal.rs  providers_modal_v2.rs  side_panel.rs  startup_modal.rs  status_bar.rs  title_bar.rs  track_context_menu.rs
src/components/assets/: asset_item.rs  assets_panel.rs  generative_video_modal.rs  mod.rs
src/components/attributes/: attributes_panel.rs  generative_controls.rs  mod.rs  provider_inputs.rs
src/components/common/: cursor_fix.rs  fields.rs  mod.rs
src/core/: comfyui_workflow.rs  generation.rs  media.rs  mod.rs  paths.rs  preview.rs  preview_gpu.rs  preview_store.rs  provider_store.rs  thumbnailer.rs  timeline_snap.rs  video_decode.rs
src/core/audio/: cache.rs  decode.rs  mod.rs  playback.rs  resample.rs  waveform.rs
src/core/preview/: cache.rs  layers.rs  mod.rs  renderer.rs  types.rs  utils.rs
src/core/preview_gpu/: layers.rs  mod.rs  shaders.rs  surface.rs  types.rs
src/hotkeys/: mod.rs
src/providers/: comfyui.rs  mod.rs
src/state/: asset.rs  generative.rs  mod.rs  project.rs  providers.rs  selection.rs
src/state/project/: clip.rs  marker.rs  mod.rs  persistence.rs  project.rs  settings.rs  track.rs
src/timeline/: clip_element.rs  marker_element.rs  mod.rs  panel.rs  playback_controls.rs  ruler.rs  track_label.rs  track_row.rs
workflows/: Mock Video Workflow API.json  Mock Video Workflow API_manifest.json  SDXL-VANILLA-API.json  SDXL-VANILLA-API_manifest.json  sdxl_simple_example_API.json  sdxl_simple_example_API_manifest.json
