[package]
name = "nla-ai-videocreator"
version = "0.1.0"
edition = "2021"
description = "A local-first, AI-native Non-Linear Animation editor for generative video production"
license = "MIT"
authors = ["NLA AI Video Creator Contributors"]

[dependencies]
dioxus = { version = "0.7", features = ["desktop"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rfd = "0.15"  # Native file dialogs
tokio = { version = "1.49.0", features = ["full"] }
http = "1.4.0"
urlencoding = "2.1.3"
mime_guess = "2.0.5"
percent-encoding = "2.3.2"

# Future dependencies:
# tokio = { version = "1", features = ["full"] }
# reqwest = { version = "0.12", features = ["json"] }

[features]
default = []
